view now updates instantaneously